--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   <div class="flex flex-col items-center gap-6 text-center">
     <h1 class="text-3xl font-bold text-pink-700">💖 Bem-vindo ao Fã-Clube da Kamila 💖</h1>
     <div class="flex flex-col sm:flex-row gap-4">
-      <a href="/v1/index.html" class="pink-btn px-6 py-3 rounded-lg shadow-lg text-white font-bold text-lg">Fã-Clube da Kamila v1</a>
-      <a href="/v2/index.html" class="pink-btn px-6 py-3 rounded-lg shadow-lg text-white font-bold text-lg">Fã-Clube da Kamila v2</a>
+      <a href="v1/index.html" class="pink-btn px-6 py-3 rounded-lg shadow-lg text-white font-bold text-lg">Fã-Clube da Kamila v1</a>
+      <a href="v2/index.html" class="pink-btn px-6 py-3 rounded-lg shadow-lg text-white font-bold text-lg">Fã-Clube da Kamila v2</a>
     </div>
   </div>
 </body>
