--- a/v1/index.html
+++ b/v1/index.html
@@ -77,10 +77,10 @@
             <p class="text-2xl md:text-3xl text-pink-800 italic">"Você é a melhor professora de todas!"</p>
         </header>
 
-        <a href="../index.html">
+<!--         <a href="../index.html">
       <button class="absolute top-4 left-4 flex items-center text-[#ff6eb8] font-bold text-lg hover:underline">
         ← Voltar
-      </button></a>
+      </button></a> -->
         
         <!-- Photo slider -->
         <section class="mb-16">
