--- a/v2/amantes.html
+++ b/v2/amantes.html
@@ -21,10 +21,10 @@
 
 <body>
   <div class="container mx-auto p-6">
-    <a href="index.html">
+<!--     <a href="index.html">
       <button class="absolute top-4 left-4 flex items-center text-[#ff6eb8] font-bold text-lg hover:underline">
         ← Voltar
-      </button></a>
+      </button></a> -->
     <h1 class="text-3xl font-bold mb-6 text-center">Amantes da Kamila</h1>
 
     <!-- Área dos comentários -->
