--- a/v2/index.html
+++ b/v2/index.html
@@ -28,10 +28,10 @@
 
 <body class="flex flex-col items-center justify-center min-h-screen text-center gap-6 px-4">
 
-  <a href="../index.html">
+<!--   <a href="../index.html">
       <button class="absolute top-4 left-4 flex items-center text-[#ff6eb8] font-bold text-lg hover:underline">
         ← Voltar
-      </button></a>
+      </button></a> -->
 
   <h1 class="text-3xl font-bold text-pink-700">💖 Bem-vindo ao Fã-Clube da Kamila 💖</h1>
 
