--- a/v2/quadros.html
+++ b/v2/quadros.html
@@ -20,10 +20,10 @@
 </head>
 
 <body>
-  <a href="index.html">
+<!--   <a href="index.html">
     <button class="absolute top-4 left-4 flex items-center text-[#ff6eb8] font-bold text-lg hover:underline">
       ← Voltar
-    </button></a>
+    </button></a> -->
 
 
   <div class="container mx-auto p-6">
